scroll glitch bug to test on iphone

--- a/src/app/pages/homepage/index.css
+++ b/src/app/pages/homepage/index.css
@@ -168,10 +168,6 @@ body {
 }
 
 .homepage.--mobile {
-  & * {
-    opacity: 1 !important;
-  }
-
   & .logo {
     display: none;
   }
